src/modules/menu/components/mainMenu/mainMenu.css
.main-menu {
	position: fixed;
	z-index: var(--z-mainmenu);
	background-color: var(--primary-bg-color);
	bottom: 0;
	top: 0;
	left: -28em;
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
	overflow: visible;
	transition-property: transform;
	transition-duration: var(--animation-duration-large-open);
	transition-timing-function: var(--animation-easing-linear);
}
.main-menu__container {
	overflow-y: auto;
	overflow-x: hidden;
	top: 13.5em;
	bottom: 0;
	height: auto;
	position: absolute;
	width: 100%;
}
.main-menu__close-button {
	position: absolute;
	z-index: calc(var(--z-mainmenu) + 10);
	background: var(--primary-bg-color);
	border: 0;
	width: 3.5em;
	height: 3.5em;
	left: 29.8em;
	top: 7.5em;
	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
	text-align: left;
	border-radius: 2em;
	/* padding: 0 .8em; */
	transition-property: left;
	transition-duration: var(--animation-duration-large-open);
	transition-delay: var(--animation-duration-large-open);
	transition-timing-function: var(--animation-easing-linear);
}
.main-menu__close-button:hover {
	background: var(--header-background-color);
}
.main-menu__close-button:focus {
	box-shadow: inset 0 0 0 0.2em var(--primary-color-lighter);
}
.is-open .main-menu__close-button {
	left: -15em;
	transition-delay: 0s;
	transition-duration: 0s;
}
.arrow {
	position: absolute;
	width: 0;
	height: 0;
	top: 0.8em;
	left: 8em;
	border-width: 0.5em;
	border-style: solid;
	border-color: transparent transparent transparent var(--text2);
	opacity: 0.8;
}
.main-menu__close-button-text {
	display: none;
}
.is-open .main-menu {
	transform: translate(28em, 0);
}
.is-open .arrow {
	left: 0;
	transform: rotate(180deg);
}
.is-portrait .arrow {
	position: absolute;
	width: 0;
	height: 0;
	top: 0.4em;
	left: 1.5em;
	border-width: 0.5em;
	border-style: solid;
	border-color: var(--text2) transparent transparent transparent;
}
.main-menu__close-button:hover .arrow {
	opacity: 1;
}

.prevent-transition * {
	-webkit-transition: none !important;
	-moz-transition: none !important;
	-ms-transition: none !important;
	-o-transition: none !important;
}
/*tablet*/
.is-tablet .main-menu__container {
	top: 8.5em;
}
.is-tablet .main-menu__close-button {
	top: 5.5em;
	transform: scale(0.9);
	margin-left: -0.2em;
}
/*portrait */
.is-portrait .main-menu {
	top: -65vh;
	height: calc(65vh + 6.6em);
	left: 0;
	right: 0em;
	width: auto;
	overflow: auto;
	padding: 3em 0;
}
.is-open.is-open-navigationRail .main-menu {
	transform: translate(33.5em, 0);
}
.is-landscape:not(.is-full-size) .main-menu {
	width: 28em !important;
}
.is-portrait .main-menu__close-button {
	position: absolute;
	top: unset;
	left: 50%;
	bottom: -2em;
	right: 0em;
	border-radius: 2em;
	width: 4em;
	margin-left: -2em;
	height: 4em;
	background: var(--header-background-color);
	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
}
.is-portrait .main-menu__close-button-text {
	display: none;
}
.is-portrait.is-open .main-menu {
	transform: translate(0, 65vh);
	height: calc(65vh + 6.6em);
	overflow: visible;
}
.is-portrait .main-menu__container {
	overflow-y: auto;
	top: 8.5em;
	bottom: 0;
	height: auto;
	position: absolute;
	width: 100%;
	padding: 0 0 3em 0;
}
.ba-list-item > * {
	padding-top: 0.8em;
	padding-bottom: 0.8em;
}
.is-active > * {
	width: 100%;
	animation-name: animateFadeIn;
	animation-fill-mode: both;
	animation-duration: var(--animation-duration-medium-open);
	animation-timing-function: var(--animation-easing-open);
}
.is-portrait .main-menu__container * {
	font-size: 1.2rem;
}

.tabcontent {
	display: none;
}
.is-active {
	display: block;
}
.is-active ba-feature-info-panel {
	animation-duration: var(--animation-duration-medium-open);
	animation-fill-mode: both;
	position: absolute;
	width: 100%;
}
.is-full-size.is-open .main-menu {
	z-index: calc(var(--z-header) + 90);
}
.is-landscape.is-full-size .main-menu {
	top: -14em;
	min-width: 28em;
	overflow: visible;
}
.is-landscape.is-desktop.is-full-size .main-menu {
	top: -13.5em;
}
.is-landscape.is-tablet.is-full-size .main-menu {
	top: -8.5em;
}
.is-portrait.is-full-size .main-menu__container {
	top: 0;
}
.slider-container {
	display: none;
	position: fixed;
	width: 100vw;
	z-index: calc(var(--z-mainmenu) + 10);
	padding: 0 0 0 28.4em;
	height: 100%;
	pointer-events: none;
}
.is-landscape.is-full-size.is-open .slider-container {
	display: block;
}
.slider-container input {
	width: 74.3em;
	left: -1.5em;
	top: 50%;
	position: relative;
	margin-top: 5em;
	pointer-events: all;
}
input[type='range'] {
	--track-height: 0;
	--track-fill: 0%;
	--thumb-size: 2.5em;
	--thumb-offset: 0;
	--thumb-highlight-size: 0px;
	appearance: none;
	display: block;
	background: transparent;
	outline-offset: 5px;
	pointer-events: none;
}
input[type='range']::-webkit-slider-thumb {
	appearance: none;
	cursor: ew-resize;
	border: 0.2em solid var(--secondary-color);
	block-size: var(--thumb-size);
	inline-size: var(--thumb-size);
	margin-top: var(--thumb-offset);
	border-radius: 50%;
	background: url('assets/expand.svg') var(--secondary-color);
	width: 2.3em;
	height: 2.3em;
	background-size: 1.9em 1.9em;
	background-repeat: no-repeat;
	box-shadow: 0 0 0 var(--thumb-highlight-size) var(--primary-color-lighter);
	transition: box-shadow 0.1s ease;
	pointer-events: all;
}
input[type='range']::-moz-range-thumb {
	appearance: none;
	cursor: ew-resize;
	border: 0.2em solid var(--secondary-color);
	block-size: 2em;
	inline-size: 2em;
	margin-top: 0;
	border-radius: 50%;
	background: url('assets/expand.svg') var(--secondary-color);
	width: 2em;
	height: 2em;
	background-size: 1.9em 1.9em;
	background-repeat: no-repeat;
	box-shadow: 0 0 0 var(--thumb-highlight-size) var(--primary-color-lighter);
	transition: box-shadow 0.1s ease;
	pointer-events: all;
}
input[type='range']::-webkit-slider-runnable-track {
	appearance: none;
	block-size: 0;
}
input[type='range']::-moz-range-track {
	appearance: none;
	block-size: 0;
}
input[type='range']:focus {
	--thumb-highlight-size: 0.3em;
}
@keyframes animateFadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}
/* demo content */

.ba-list-inline {
	display: flex;
	flex-direction: row;
	justify-content: center;
}
.ba-list-inline li {
	border-left: 1px var(--secondary-bg-color) solid;
	text-align: center;
}
.ba-list-inline li:first-child {
	border-left: 0;
	text-align: center;
}
.ba-list-item {
	display: flex;
}
.ba-list-item:hover {
	background: var(--header-background-color);
}

.ba-list-item > *:first-child {
	padding-left: 1.5em;
}
.ba-list-item > *:last-child {
	padding-right: 1.5em;
}
.ba-list-item__header {
	font-weight: bold;
	cursor: default;
}
.ba-list-item__header:hover {
	background: none;
}
.ba-list-item__pre {
	display: flex;
	margin: 0 1em 0 0;
}
.ba-list-item__after {
	display: flex;
	margin: 0 0 0 1em;
}
.ba-list-item__image {
	height: 4em;
	width: 8em;
	min-width: 8em;
	background: var(--secondary-bg-color);
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}
.ba-list-item__icon {
	height: 3em;
	width: 3em;
	border-radius: 2em;
	background: var(--secondary-bg-color);
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}
.ba-list-item__icon-info {
	background-repeat: no-repeat;
	background-image: url('assets/info.svg');
	margin: auto;
	height: 2em;
	width: 2em;
	background-position: 0.5em;
	font-size: 1rem;
}
.ba-list-item__text {
	flex-grow: 1;
}
.vertical-center {
	margin: auto;
}

.ba-list-item__primary-text {
	display: block;
	font-size: 1rem;
}
.ba-list-item__secondary-text {
	font-size: 0.95rem;
	color: var(--text2);
}
.divider {
	border-bottom: 1px solid var(--header-background-color);
}
.resize-icon {
	background: var(--text2);
	display: block;
	margin: auto;
	mask: url('assets/arrowBarRight.svg');
	-webkit-mask: url('assets/arrowBarRight.svg');
	mask-size: cover;
	-webkit-mask-size: cover;
}
.is-desktop .resize-icon,
.is-tablet .resize-icon {
	background: var(--primary-color);
	display: block;
	height: 2em;
	width: 2.1em;
	margin: auto;
	mask: url('assets/list.svg');
	-webkit-mask: url('assets/list.svg');
	mask-size: cover;
	-webkit-mask-size: cover;
}
.is-portrait .resize-icon {
	transform: rotate(270deg);
	position: relative;
	height: 2em;
	width: 1.2em;
	background: var(--primary-color);
	mask: url('assets/chevron-right.svg');
	-webkit-mask: url('assets/chevron-right.svg');
	mask-size: cover;
	-webkit-mask-size: cover;
}

